# intraday-trading-spy

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENTS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  fly.toml  pyproject.toml
backend/config/: config.yaml  config_exp_cap_200.yaml  logging.yaml
backend/config/presets/: README.md  aggressive.yaml  demo.yaml  low-risk.yaml  vwap50.yaml
backend/data/raw/: spy_5m_2026-04-01_2026-04-15.csv  spy_5m_2026-04-01_2026-04-15.csv.fetch.yaml  spy_5m_sample.csv
backend/db/migrations/: 0001_strategies.sql  0002_configs.sql  0003_runs.sql  0004_trades.sql  0005_signals.sql  0006_journal_events.sql  0007_bars.sql  0010_rls_enable.sql  0011_rls_policies_strategies.sql  0012_rls_policies_user_scoped.sql  0013_rls_policies_bars.sql  0020_seed_strategies.sql  0030_push_run_function.sql  0040_storage_buckets.sql  0050_journal_event_kinds.sql  0051_runs_status.sql  0052_push_run_finalize.sql  0053_push_run_finalize_full_update.sql  0060_data_download_jobs.sql  0070_seed_default_config_on_signup.sql  0080_reseed_default_config_nested.sql  0090_runs_is_favorite.sql  0091_runs_spec_dedup.sql  0092_configs_unique_name.sql  0092_runs_config_snapshot.sql  0093_bars_bar_start_index.sql  0094_backfill_jobs.sql  0110_validation_studies.sql  0111_runs_study_columns.sql  0112_lockbox_ledger.sql  0120_configs_active_flag.sql  0121_runs_config_id_nullable.sql  0122_workable_default_seed.sql  0123_insight_analyses.sql  0124_configs_description.sql  0125_recommendation_trials.sql  0126_research_campaigns.sql  0127_journal_campaign_kind.sql  0128_signals_entry_window_reason.sql  0129_paper_trading.sql  (+1 more)
backend/scripts/: backfill_bars.py  download_spy_data.py  run_backtest.py  seed_bars_from_csv.py
backend/src/intraday_trade_spy/: clock.py  config.py  config_presets.py  config_summary.py  models.py  run_spec.py
backend/src/intraday_trade_spy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/intraday_trade_spy/api/: app.py  claude_analyst.py  coverage.py  deps.py  errors.py  lifecycle.py  pagination.py  schemas.py  static_server.py  validation_lifecycle.py
backend/src/intraday_trade_spy/auth/: __init__.py  jwks.py  token.py
backend/src/intraday_trade_spy/backtest/: engine.py  manifest.py  metrics.py
backend/supabase/: config.toml
backend/tests/: conftest.py  test_backfill_cli.py  test_backtest_engine.py  test_chunker.py  test_cli.py  test_clock.py  test_config.py  test_config_data_foundation.py  test_config_knobs.py  test_config_presets.py  test_config_summary.py  test_cost_fixture.py  test_coverage_months.py  test_default_config_blocks_live.py  test_download_cli.py  test_downloader.py  test_effective_config.py  test_fetch_manifest.py  test_indicators.py  test_journal.py  test_loader.py  test_manifest.py  test_metrics.py  test_models.py  test_module_boundaries.py  test_paper_broker.py  test_replay_backtest_parity.py  test_replay_config.py  test_replay_dates.py  test_replay_engine.py  test_replay_journal.py  test_replay_runner.py  test_replay_session.py  test_risk_manager.py  test_risk_state.py  test_run_spec.py  test_run_summary_view.py  test_sizing.py  test_static_server.py  test_storage_config_models.py  (+3 more)
backend/tests/api/: test_backfill_idempotency.py  test_backfill_runner.py  test_lockbox_child_run.py  test_materialize_dedup.py  test_regime_coverage.py  test_study_persist_callback.py  test_validation_lifecycle_persist.py
backend/tests/auth/: conftest.py  test_jwks.py  test_token_verify.py
backend/tests/cli/: test_research_cli.py  test_run_backtest_push.py  test_session.py
backend/tests/data/: test_alpaca_source.py  test_bar_source.py  test_bar_validation.py  test_downloader_transient.py  test_market_calendar.py
backend/tests/fixtures/: adversarial_future_leak.csv  cost_fixture_expected.md
backend/tests/journal/: test_logger_cloud.py
backend/tests/live/: test_aggregator.py  test_alpaca_broker.py  test_alpaca_stream.py  test_constitution_gates.py  test_engine.py  test_live_journal.py  test_market_view.py  test_runner.py  test_session_state.py
backend/tests/recommend/: test_candidates.py  test_evidence.py  test_health.py  test_thresholds.py
backend/tests/research/: test_bar_schedule.py  test_campaign.py  test_naming.py  test_wiring.py
backend/tests/storage/: conftest.py  test_backfill_jobs.py  test_bars_stats_integration.py  test_build_run_payload.py  test_campaigns.py  test_client_configs.py  test_client_foundation.py  test_client_push.py  test_client_strategies.py  test_client_upsert_config.py  test_cloud_summary_mapping.py  test_config_uniqueness.py  test_default_config_trigger.py  test_exceptions.py  test_factory_reset.py  test_insights_aggregates.py  test_list_runs.py  test_list_runs_filter.py  test_models_payload.py  test_models_run_trade.py  test_models_signal_event_bar.py  test_models_strategy_config.py  test_paper_storage.py  test_present_session_dates.py  test_push_atomic.py  test_push_gather.py  test_push_perf.py  test_push_round_trip.py  test_recommend_storage.py  test_rls_foundation.py  test_schema_tables.py  test_storage_buckets.py  test_strategy_lifecycle.py
backend/tests/validation/: test_config_validation.py  test_engine_run_df.py  test_knobs.py  test_lifecycle.py  test_lockbox.py  test_monte_carlo.py  test_no_live_path.py  test_persisted_flag.py  test_pooled.py  test_random_entry.py  test_sensitivity.py  test_significance.py  test_split.py  test_storage_models.py  test_study_orchestrator.py  test_study_persistence.py  test_walk_forward.py  test_window.py
(+733 files in other folders)
