[project]
name = "intraday-trade-spy"
version = "0.1.0"
description = "SPY-only intraday backtester + (later) paper trader"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "yfinance>=0.2.40",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "supabase>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "ruff>=0.5",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[project.scripts]
intraday-trade-spy-backtest = "intraday_trade_spy.cli.run_backtest:main"
intraday-trade-spy-download = "intraday_trade_spy.cli.download_spy_data:main"
intraday-trade-spy-server = "intraday_trade_spy.api.static_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: opt-in tests that hit real external services or run perf-budgets (deselect with -m 'not slow')",
    "api: in-process FastAPI TestClient tests (exempt from the socket blocker; no real network)",
    "integration: opt-in tests that require a local Supabase via Docker (deselect with -m 'not integration')",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
