[project]
name = "intraday-trade-spy"
version = "0.1.0"
description = "SPY-only intraday backtester + (later) paper trader"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "yfinance>=0.2.40",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "supabase>=2.7",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    # Phase 0 data foundation (Feature 009): multi-year historical bars from
    # Alpaca + NYSE session calendar for per-regime coverage completeness.
    "alpaca-py>=0.30",
    "pandas-market-calendars>=4.4",
    # Raw Postgres driver + shared pool for the R8 direct-DB aggregates
    # (bars_present_session_dates, bars_monthly_aggregate). MAIN deps — these
    # run in production request paths, not just migrations/tests. The pool is
    # the Feature 013 perf fix: per-request TLS connects to cloud Supabase
    # cost ~1s each.
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
    "ruff>=0.5",
    "pytest-asyncio>=0.24",
]

[project.scripts]
intraday-trade-spy-backtest = "intraday_trade_spy.cli.run_backtest:main"
intraday-trade-spy-download = "intraday_trade_spy.cli.download_spy_data:main"
intraday-trade-spy-server = "intraday_trade_spy.api.static_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: opt-in tests that hit real external services or run perf-budgets (deselect with -m 'not slow')",
    "api: in-process FastAPI TestClient tests (exempt from the socket blocker; no real network)",
    "integration: opt-in tests that require a local Supabase via Docker (deselect with -m 'not integration')",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
